# portfolio-project

./: README.md  models.py  requirements.txt  test_crud.py  test_main.py
chapter3/: crud.py  database3.py
chapter4/: main.py
chapter5/: main.py  openapi.json  schemas.py
chapter6/: .dockerignore  Dockerfile  main.py
chapter7/sdk/: README.md  pyproject.toml
chapter7/sdk/src/swcpy/: __init__.py  swc_client.py  swc_config.py
chapter7/sdk/tests/: test_swcpy.py
sdk/: pyproject.toml
sdk/tests/: test_swcpy.py
