[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swcpy"
version = "0.0.2"
authors = [
    { name="[enter your name]" },
]
description = "Example SDK from Hands-On API Book for AI and Data Science"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'pytest>=8.1',
    'httpx>=0.27.0',
    'pydantic>=2.4.0',     # NEW: data validation (the League(**...) schema checks)
    'backoff>=2.2.1',      # NEW: retry/backoff logic
    'pyarrow>=16.0',       # NEW: lets Python read/write Parquet files
] 